test/libyul/yulSyntaxTests/dot_consecutive_function_arg.yul
{
    function x(a..b) {}
}
// ----
// TypeError 7771: (17-21): "a..b" is not a valid identifier (contains consecutive dots).
